--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Create Relaese
+name: Create Release
 
 on:
   push:
@@ -22,43 +22,13 @@ jobs:
           go-version: "1.22.1"
 
       - name: Build for Windows
-        run: GOOS=windows GOARCH=amd64 go build -o myapp-${{ github.ref_name }}-windows-amd64.exe
+        run: GOOS=windows GOARCH=amd64 go build -o learn-${{ github.ref_name }}-windows-amd64.exe
 
       - name: Build for macOS
-        run: GOOS=darwin GOARCH=amd64 go build -o myapp-${{ github.ref_name }}-macos-amd64
+        run: GOOS=darwin GOARCH=amd64 go build -o learn-${{ github.ref_name }}-macos-amd64
 
       - name: Build for Linux
-        run: GOOS=linux GOARCH=amd64 go build -o myapp-${{ github.ref_name }}-linux-amd64
-
-      - name: Upload Release Asset Windows
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./myapp-${{ github.ref_name }}-windows-amd64.exe
-          asset_name: myapp-${{ github.ref_name }}-windows-amd64.exe
-          asset_content_type: application/octet-stream
-
-      - name: Upload Release Asset macOS
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./myapp-${{ github.ref_name }}-macos-amd64
-          asset_name: myapp-${{ github.ref_name }}-macos-amd64
-          asset_content_type: application/octet-stream
-
-      - name: Upload Release Asset Linux
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./myapp-${{ github.ref_name }}-linux-amd64
-          asset_name: myapp-${{ github.ref_name }}-linux-amd64
-          asset_content_type: application/octet-stream
+        run: GOOS=linux GOARCH=amd64 go build -o learn-${{ github.ref_name }}-linux-amd64
 
       - name: Create Release
         id: create_release
@@ -70,3 +40,33 @@ jobs:
           release_name: Release ${{ github.ref_name }}
           draft: false
           prerelease: false
+
+      - name: Upload Release Asset Windows
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./learn-${{ github.ref_name }}-windows-amd64.exe
+          asset_name: learn-${{ github.ref_name }}-windows-amd64.exe
+          asset_content_type: application/octet-stream
+
+      - name: Upload Release Asset macOS
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./learn-${{ github.ref_name }}-macos-amd64
+          asset_name: learn-${{ github.ref_name }}-macos-amd64
+          asset_content_type: application/octet-stream
+
+      - name: Upload Release Asset Linux
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./learn-${{ github.ref_name }}-linux-amd64
+          asset_name: learn-${{ github.ref_name }}-linux-amd64
+          asset_content_type: application/octet-stream
