--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -9,9 +9,13 @@ on:
       - main
 
 jobs:
-  golangci:
+  lint:
     name: Lint
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: backend
 
     steps:
       - name: Check out code
