--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -54,6 +54,8 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          context: ./
+          file: ./Dockerfile
           build-args: |
             APP_RELEASE=${{ github.sha }}
           push: ${{ github.event_name != 'pull_request' }}
