--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,11 @@ jobs:
   build:
     name: Build and Release
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: backend
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -19,7 +24,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: "1.22.1"
+          go-version: "1.22.*"
 
       - name: Build for Windows
         run: GOOS=windows GOARCH=amd64 go build -o learn-${{ github.ref_name }}-windows-amd64.exe
