--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -54,7 +54,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: ./
+          context: ./backend
           file: ./Dockerfile
           build-args: |
             APP_RELEASE=${{ github.sha }}
