--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -54,8 +54,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: ./backend
-          file: ./Dockerfile
+          file: ./backend/Dockerfile
           build-args: |
             APP_RELEASE=${{ github.sha }}
           push: ${{ github.event_name != 'pull_request' }}
